Fixes #14 Feature: Collapse loads in scrubberBox.
* Loads drop down on right side.
* Removed scrollbar from console.
* Changed UI for messages with scaling.

--- a/Panel/QuerypointPanel.css
+++ b/Panel/QuerypointPanel.css
@@ -192,6 +192,7 @@ a:focus, a:active {
   left: 0;
   overflow: hidden;
   right: 0;
+  margin-left: 15px;
 }
 
 .traceView {
